feat(loans): add lending, borrowing, requesting and checking users on both backend and frontend